fix safari hover flicker issue with mathjax element

--- a/shared/resources/styles/components/question.scss
+++ b/shared/resources/styles/components/question.scss
@@ -82,6 +82,7 @@
       margin-left: $openstax-answer-horizontal-spacing;
       * {
         margin: 0;
+        -webkit-transform: translate3d(0, 0, 0); // Fix Safari MathJax hover flicker
       }
     }
 
